--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@vuepress/plugin-google-analytics": "^1.8.2",
     "documentation": "^13.2.5",
     "eslint": "^8.12.0",
@@ -60,7 +61,8 @@
     "env": {
       "test": {
         "presets": [
-          "@babel/preset-env"
+            "@babel/preset-env",
+          "@babel/preset-typescript"
         ]
       }
     }
