--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grapesjs",
   "description": "Free and Open Source Web Builder Framework",
-  "version": "0.19.0",
+  "version": "0.19.1",
   "author": "Artur Arseniev",
   "license": "BSD-3-Clause",
   "homepage": "http://grapesjs.com",
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@babel/cli": "^7.15.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@types/backbone": "^1.4.15",
     "@vuepress/plugin-google-analytics": "^1.8.2",
     "documentation": "^13.2.5",
     "eslint": "^8.12.0",
@@ -61,7 +62,7 @@
     "env": {
       "test": {
         "presets": [
-            "@babel/preset-env",
+          "@babel/preset-env",
           "@babel/preset-typescript"
         ]
       }
