--- a/.eslintrc
+++ b/.eslintrc
@@ -9,13 +9,16 @@
   },
   "rules": {
     "strict": 0,
-    "quotes": ["error", "single"],
-    "eol-last": ["error", "always"],
+    "quotes": ["warn", "single"],
+    "eol-last": ["warn", "always"],
     "no-mixed-requires": [0],
     "no-underscore-dangle": [0]
   },
   "overrides": [{
     "files": ["*.ts"],
     "parser": "@typescript-eslint/parser"
-  }]
+  }],
+  "ignorePatterns": [
+    "dist/*"
+  ]
 }
