--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   },
   "lint-staged": {
     "{src,test}/**/*.(t|j)s": [
+      "npm run lint -- --fix",
       "prettier --single-quote --print-width 120 --arrow-parens avoid --write",
       "git add"
     ]
