--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/artf/grapesjs.git"
+    "url": "https://github.com/GrapesJS/grapesjs.git"
   },
   "dependencies": {
     "backbone": "1.4.1",
