--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ezygrapes",
   "description": "Web Builder Framework for EzyPlatform",
-  "version": "0.0.2",
+  "version": "0.0.5",
   "author": "youngmonkeys",
   "license": "BSD-3-Clause",
   "homepage": "youngmonkeys.org",
@@ -108,7 +108,7 @@
     "lint": "eslint . --ext .ts,.js",
     "check": "npm run lint && npm run test",
     "check:ts": "tsc --noEmit --esModuleInterop dist/index.d.ts",
-    "build": "npm run check && run-s build:*",
+    "build": "npm run check && run-s build:* && cp dist/grapes.min.* plugins/ezygrapes-webpage/lib",
     "build:js": "grapesjs-cli build --targets=\"> 1%, ie 11, safari 8, not dead\" --statsOutput=\"stats.json\" --localePath=\"src/i18n/locale\"",
     "build:css": "sass src/styles/scss/main.scss dist/css/grapes.min.css --no-source-map --style=compressed --load-path=node_modules",
     "start": "run-p start:*",
