--- a/package.json
+++ b/package.json
@@ -107,7 +107,8 @@
     "docs:deploy": "docs/deploy.sh",
     "lint": "eslint . --ext .ts,.js",
     "check": "npm run lint && npm run test",
-    "check:ts": "tsc --noEmit --esModuleInterop dist/index.d.ts",
+    "check:ts": "tsc --noEmit",
+    "check:ts:build": "tsc --noEmit --esModuleInterop dist/index.d.ts",
     "build": "npm run check && run-s build:*",
     "build:js": "grapesjs-cli build --targets=\"> 1%, ie 11, safari 8, not dead\" --statsOutput=\"stats.json\" --localePath=\"src/i18n/locale\"",
     "build:css": "sass src/styles/scss/main.scss dist/css/grapes.min.css --no-source-map --style=compressed --load-path=node_modules",
