--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grapesjs",
   "description": "Free and Open Source Web Builder Framework",
-  "version": "0.21.6",
+  "version": "0.21.4",
   "author": "Artur Arseniev",
   "license": "BSD-3-Clause",
   "homepage": "http://grapesjs.com",
@@ -33,7 +33,7 @@
     "@vuepress/plugin-google-analytics": "^1.8.2",
     "documentation": "^13.2.5",
     "eslint": "^8.12.0",
-    "grapesjs-cli": "^4.1.2",
+    "grapesjs-cli": "^4.1.3",
     "html-entities": "^1.4.0",
     "husky": "^2.7.0",
     "jest": "^24.9.0",
@@ -111,7 +111,7 @@
     "build": "npm run check && run-s build:*",
     "build:js": "grapesjs-cli build --targets=\"> 1%, ie 11, safari 8, not dead\" --statsOutput=\"stats.json\" --localePath=\"src/i18n/locale\"",
     "build:css": "sass src/styles/scss/main.scss dist/css/grapes.min.css --no-source-map --style=compressed --load-path=node_modules",
-    "ts:build": "grapesjs-cli build --dts='only'",
+    "ts:build": "grapesjs-cli build --dts='only' --patch=0",
     "ts:check": "tsc --noEmit --esModuleInterop dist/index.d.ts",
     "ts:build:check": "npm run ts:build && npm run ts:check",
     "start": "run-p start:*",
