--- a/package.json
+++ b/package.json
@@ -104,9 +104,9 @@
     "docs:build-vp": "vuepress build docs",
     "docs:build": "npm run docs:api && npm run docs:build-vp",
     "docs:deploy": "docs/deploy.sh",
-    "lint": "eslint . --ext .ts,.js",
+    "lint": "eslint . --ext .ts,.js && npm run lint:ts",
     "check": "npm run lint && npm run test",
-    "check:ts": "tsc --noEmit",
+    "lint:ts": "tsc --noEmit",
     "build": "npm run check && run-s build:* && npm run ts:check",
     "build:js": "grapesjs-cli build --targets=\"> 1%, ie 11, safari 8, not dead\" --statsOutput=\"stats.json\" --localePath=\"src/i18n/locale\"",
     "build:css": "sass src/styles/scss/main.scss dist/css/grapes.min.css --no-source-map --style=compressed --load-path=node_modules",
