--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "codemirror-formatting": "^1.0.0",
     "promise-polyfill": "^8.1.3",
     "underscore": "^1.13.1",
-    "vsce": "^2.5.3"
+    "@vscode/vsce": "^2.5.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
