--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -10,9 +10,7 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [
-    "onCommand:extension.grapesjsOpen"
-  ],
+  "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
@@ -31,10 +29,14 @@
     "package": "vsce package"
   },
   "devDependencies": {
-    "typescript": "^4.0.2",
-    "vscode": "^1.1.37",
+    "@types/node": "^20.12.12",
     "@vscode/vsce": "^2.5.3",
     "eslint": "^7.7.0",
-    "mocha": "^8.1.3"
+    "mocha": "^8.1.3",
+    "typescript": "^4.0.2",
+    "vscode": "^1.1.37"
+  },
+  "dependencies": {
+    "path": "^0.12.7"
   }
 }
