--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "backbone-undo": "^0.2.5",
     "codemirror": "^5.63.0",
     "codemirror-formatting": "^1.0.0",
+    "dompurify": "^3.1.6",
     "promise-polyfill": "^8.1.3",
     "underscore": "^1.13.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@types/dompurify": "^3.0.5",
     "@types/jest": "^28.1.1",
     "@typescript-eslint/parser": "^5.22.0",
     "@vuepress/plugin-google-analytics": "^1.8.2",
