--- a/package.json
+++ b/package.json
@@ -49,9 +49,7 @@
     "eslint": "^8.12.0",
     "grapesjs-cli": "^4.1.3",
     "html-entities": "^1.4.0",
-    "husky": "^2.7.0",
     "jest": "^24.9.0",
-    "lint-staged": "^8.2.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
     "sass": "^1.42.1",
@@ -83,13 +81,6 @@
       }
     }
   },
-  "lint-staged": {
-    "{src,test}/**/*.(t|j)s": [
-      "eslint --ext .ts,.js --fix",
-      "prettier --single-quote --print-width 120 --arrow-parens avoid --write",
-      "git add"
-    ]
-  },
   "jest": {
     "moduleFileExtensions": [
       "js",
@@ -107,11 +98,6 @@
       "<rootDir>/test/setup.js"
     ]
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "scripts": {
     "docs": "vuepress dev docs",
     "docs:api": "node docs/api.js",
@@ -123,10 +109,10 @@
     "lint:ts": "tsc --noEmit",
     "build": "npm run check && npm run build-all && npm run ts:check",
     "build-all": "run-s build:*",
-    "build:js": "grapesjs-cli build --targets=\"> 1%, ie 11, safari 8, not dead\" --statsOutput=\"stats.json\" --localePath=\"src/i18n/locale\"",
-    "build:mjs": "BUILD_MODULE=true grapesjs-cli build --dts='skip' --patch=0 --targets=\"> 1%, ie 11, safari 8, not dead\"",
+    "build:js": "grapesjs-cli build --patch=false --targets=\"> 1%, ie 11, safari 8, not dead\" --statsOutput=\"stats.json\" --localePath=\"src/i18n/locale\"",
+    "build:mjs": "BUILD_MODULE=true grapesjs-cli build --dts='skip' --patch=false --targets=\"> 1%, ie 11, safari 8, not dead\"",
     "build:css": "sass src/styles/scss/main.scss dist/css/grapes.min.css --no-source-map --style=compressed --load-path=node_modules",
-    "ts:build": "grapesjs-cli build --dts='only' --patch=0",
+    "ts:build": "grapesjs-cli build --dts='only' --patch=false",
     "ts:check": "tsc --noEmit --esModuleInterop dist/index.d.ts",
     "ts:build:check": "npm run ts:build && npm run ts:check",
     "start": "run-p start:*",
