--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "grapesjs-cli": "^4.1.3",
     "html-entities": "^1.4.0",
     "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "jsdom": "24.1.1",
     "npm-run-all": "^4.1.5",
     "postcss": "8",
