--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "url": "https://github.com/GrapesJS/grapesjs.git"
   },
   "dependencies": {
-    "@types/backbone": "^1.4.15",
+    "@types/backbone": "1.4.15",
     "backbone": "1.4.1",
-    "backbone-undo": "^0.2.5",
-    "codemirror": "^5.63.0",
-    "codemirror-formatting": "^1.0.0",
-    "promise-polyfill": "^8.1.3",
-    "underscore": "^1.13.1"
+    "backbone-undo": "0.2.5",
+    "codemirror": "5.63.0",
+    "codemirror-formatting": "1.0.0",
+    "promise-polyfill": "8.1.3",
+    "underscore": "1.13.1"
   },
   "devDependencies": {
     "@babel/cli": "7.24.8",
@@ -46,29 +46,29 @@
     "@types/markdown-it": "14.1.2",
     "@typescript-eslint/eslint-plugin": "8.2.0",
     "@typescript-eslint/parser": "8.0.1",
-    "@vuepress/plugin-google-analytics": "^1.8.2",
-    "@vuepress/types": "^1.9.10",
-    "documentation": "^13.2.5",
+    "@vuepress/plugin-google-analytics": "1.8.2",
+    "@vuepress/types": "1.9.10",
+    "documentation": "13.2.5",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-jest": "28.8.0",
     "eslint-plugin-prettier": "5.1.3",
-    "grapesjs-cli": "^4.1.3",
-    "html-entities": "^1.4.0",
+    "grapesjs-cli": "4.1.3",
+    "html-entities": "1.4.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jsdom": "24.1.1",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all": "4.1.5",
     "postcss": "8",
     "prettier": "3.3.3",
-    "sass": "^1.42.1",
+    "sass": "1.42.1",
     "typescript": "5.5.4",
-    "vuepress": "^1.9.10",
-    "whatwg-fetch": "^3.6.2"
+    "vuepress": "1.9.10",
+    "whatwg-fetch": "3.6.2"
   },
   "resolutions": {
     "backbone-undo/backbone": "1.3.3",
-    "backbone-undo/underscore": "^1.13.1"
+    "backbone-undo/underscore": "1.13.1"
   },
   "keywords": [
     "grapes",
