--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,11 @@ images/
 private/
 vendor/
 coverage/
-/locale/
+locale/
 node_modules/
 bower_components/
 grapesjs-*.tgz
 _index.html
 docs/.vuepress/dist
 dist/
+.turbo/
