--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -6,7 +6,7 @@ on:
     branches: [dev]
 
 jobs:
-  quailty-checks:
+  quality-checks:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
