--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@babel/core": "7.25.2",
     "@babel/preset-env": "7.25.4",
     "@babel/preset-typescript": "7.24.7",
+    "@babel/plugin-transform-runtime": "7.25.4",
+    "@babel/runtime": "7.25.6",
+    "babel-loader": "9.1.3",
     "@jest/globals": "29.7.0",
     "@types/jest": "29.5.12",
     "@types/node": "22.4.1",
