--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -41,7 +41,7 @@
   },
   "devDependencies": {
     "@types/markdown-it": "14.1.2",
-    "grapesjs-cli": "4.1.3",
+    "grapesjs-cli": "workspace:^",
     "jest-environment-jsdom": "29.7.0",
     "jsdom": "24.1.1",
     "npm-run-all": "4.1.5",
