--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -37,6 +37,7 @@
     "lodash.template": "^4.5.0",
     "rimraf": "^4.1.2",
     "spdx-license-list": "^6.6.0",
+    "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1",
