--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -41,11 +41,13 @@
   },
   "devDependencies": {
     "@types/markdown-it": "14.1.2",
+    "@types/pretty": "2.0.3",
     "grapesjs-cli": "4.1.3",
     "jest-environment-jsdom": "29.7.0",
     "jsdom": "24.1.1",
     "npm-run-all": "4.1.5",
     "postcss": "8",
+    "pretty": "2.0.0",
     "sass": "1.42.1",
     "whatwg-fetch": "3.6.20"
   },
