--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -28,24 +28,24 @@
   "author": "Artur Arseniev",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/plugin-transform-runtime": "^7.19.6",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/runtime": "^7.20.13",
-    "babel-loader": "^9.1.2",
+    "@babel/core": "7.25.2",
+    "@babel/plugin-transform-runtime": "7.25.4",
+    "@babel/preset-env": "7.25.4",
+    "@babel/runtime": "7.25.6",
+    "babel-loader": "9.1.3",
     "chalk": "^4.1.2",
-    "core-js": "^3.27.2",
+    "core-js": "3.38.1",
     "dts-bundle-generator": "^8.0.1",
-    "html-webpack-plugin": "^5.5.0",
+    "html-webpack-plugin": "5.6.0",
     "inquirer": "^8.2.5",
     "listr": "^0.14.3",
     "lodash.template": "^4.5.0",
     "rimraf": "^4.1.2",
     "spdx-license-list": "^6.6.0",
     "terser-webpack-plugin": "^5.3.10",
-    "webpack": "^5.94.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1",
+    "webpack": "5.94.0",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "5.1.0",
     "yargs": "^17.6.2"
   },
   "devDependencies": {
