--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,4 +1,5 @@
-name: GrapesJS Qualty Checks
+name: GrapesJS Quality Checks
+
 on:
   push:
     branches: [dev]
@@ -7,7 +8,10 @@ on:
 
 jobs:
   quality-checks:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup-project
