--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@types/markdown-it": "14.1.2",
+    "@types/pretty": "^2.0.3",
     "grapesjs-cli": "workspace:^",
     "jest-environment-jsdom": "29.7.0",
     "jsdom": "24.1.1",
