--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "release:cli:latest": "ts-node scripts/releaseCli latest",
     "publish:core:rc": "cd packages/core && npm publish --tag rc --access public",
     "publish:core:latest": "cd packages/core && npm publish --access public",
-    "build:core": "pnpm --filter grapesjs build"
+    "build:core": "pnpm --filter grapesjs build",
+    "build:cli": "pnpm --filter grapesjs-cli build"
   },
   "devDependencies": {
     "@babel/cli": "7.24.8",
