Up canvas API docs

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "release:cli:latest": "ts-node scripts/releaseCli latest",
     "publish:core:rc": "cd packages/core && npm publish --tag rc --access public",
     "publish:core:latest": "cd packages/core && npm publish --access public",
+    "build:docs:api": "pnpm --filter @grapesjs/docs docs:api",
     "build:core": "pnpm --filter grapesjs build",
     "build:cli": "pnpm --filter grapesjs-cli build",
     "build:docs": "pnpm --filter @grapesjs/docs build"
