package: pin webpack version for vuepress

--- a/docs/package.json
+++ b/docs/package.json
@@ -28,6 +28,7 @@
     "postcss": "8",
     "sass": "1.42.1",
     "vuepress": "1.9.10",
+    "webpack": "4.0.0",
     "whatwg-fetch": "3.6.20"
   },
   "scripts": {
