refactor: use release docs script and use commit with pkg version

--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -1,16 +1,15 @@
-name: Publish Docs
+name: Publish GrapesJS Docs
 
 on:
   push:
-    tags:
-      - 'docs-*'
-    branches:
-      - dev
+    branches: [dev]
+    paths:
+      - 'packages/docs/**'
 
 jobs:
   publish-docs:
     runs-on: ubuntu-latest
-    if: github.ref_type == 'tag' && startsWith(github.ref, 'refs/tags/docs-')
+    if: "contains(github.event.head_commit.message, 'Release GrapesJS docs:')"
     permissions:
       contents: write
     steps:
